# SampleLameForAndroid

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/zy3274311/samplelame/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/zy3274311/samplelame/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/zy3274311/samplelame/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libmp3lame/: .gitignore  bintray_plugin_upload.gradle  bintray_upload.gradle  build.gradle
libmp3lame/src/main/: AndroidManifest.xml
libmp3lame/src/main/cpp/: CMakeLists.txt  lame_jni.cpp
libmp3lame/src/main/java/com/github/zy3274311/libmp3lame/: LameEncoder.java  LameFormat.java  MP3Recorder.java
libmp3lame/src/test/java/com/github/zy3274311/libmp3lame/: ExampleUnitTest.java
